<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云溯物流</string>
    <string name="title_activity_welcome">云溯物流</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_path">PathActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="tab_scan">扫一扫</string>
    <string name="tab_find">发现</string>
    <string name="tab_profile">我</string>
    <string name="back">返回</string>

    <string name="network_not_available">请检查网络连接</string>
    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">松开刷新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">点击加载...</string>

    <string name="activity">活动</string>
    <string name="popular">热门</string>
    <string name="nearby">周边</string>
    <string name="todo">开发中</string>
    <string name="load_failed">加载失败</string>
    <string name="backpress_to_exit">再按一次返回键退出</string>
    <string name="scan_result_tip">云溯温馨提示：</string>
    <string name="verify_code_loading">查询中...</string>
    <string name="decoding_image">图片解析中...</string>
    <string name="decoding_failed">无法解析图片</string>
    <string name="copy">复制</string>
    <string name="copy_succeeded">复制成功</string>
    <string name="rfid_tip">请将手机靠近标签</string>

    <string name="yes">是</string>
    <string name="no">否</string>

    <string name="key_exist">该码已存在</string>
    <string name="key_not_verify">扫码非云溯官方认证</string>

    <string name="product_name">物品名称</string>
    <string name="product_desc">商品描述</string>
    <string name="none">无</string>

    <!-- Profile -->
    <string name="profile_scan_num_title">扫描记录</string>
    <string name="pack_scan">打包扫描</string>
    <string name="path_scan">物流扫描</string>
    <string name="modify_package">修改包装</string>
    <string name="sync_pack">同步包装</string>
    <string name="sync_path">同步物流</string>
    <string name="sync">同步</string>

    <string name="yunsoo_pack">云溯打包</string>
    <string name="yunsoo_path">云溯物流</string>

    <string name="off_line_upload">离线上传</string>
    <string name="wifi_upload">WIFI上传(推荐)</string>

    <string name="check_pack_repeat">该包装码已被扫描，请检查是否重复</string>

    <string name="home">首页</string>
    <string name="settings">设置</string>
    <string name="login">登录</string>
    <string name="title_activity_my_scan_history">扫描记录</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_path_history">物流扫描历史</string>
    <string name="title_activity_packed_history">打包历史</string>
    <string name="title_activity_pack_detail">包内详情</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="standard">规格：</string>
    <string name="per">个/箱</string>
    <string name="proceeding">正在进行:0/5</string>
    <string name="please_scan_package_key">该包已装满，请扫描包装码</string>
    <string name="please_scan_product_key">请扫产品码</string>
    <string name="today_count">今日已打包：0箱</string>
    <string name="pack_count">计数：</string>
    <string name="count_unit">箱</string>
    <string name="pack_barcode">包装码</string>
    <string name="pack">包装</string>
    <string name="product_barcode">产品码</string>
    <string name="title_activity_fix_pack">FixPackActivity</string>
    <string name="fix_tip">请扫描需要修改的包装</string>
    <string name="device_no_authorize"> 设备未授权,请扫描授权码</string>
    <string name="scan_authorize">扫码授权</string>
    <string name="scan_success">授权成功</string>
    <string name="authorize_failed">授权失败，请重新扫描</string>
    <string name="company_name">广州云溯科技有限公司</string>
    <string name="title_activity_authorize">AuthorizeActivity</string>


    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="title_activity_pack_main">PackMainActivity</string>
    <string name="title_activity_path_main">PathMainActivity</string>
    <string name="title_activity_pack_sync">PackSyncActivity</string>

    <string name="path_sync">同步物流</string>

    <string name="pack_sync">同步包装</string>
    <string name="title_activity_off_line_upload">OffLineUploadActivity</string>

    <string name="off_line_help">离线上传温馨提示：</string>
    <string name="off_line_step_1">1.使用USB线连接PDA设备和电脑</string>
    <string name="off_line_step_2">2.将SD卡/yunsu/pack/sync_task的文件拷贝至电脑</string>
    <string name="off_line_step_3">3.将SD卡/yunsu/pack/sync_task中的文件移至/yunsoo/pack/sync_success中</string>

    <string name="offline_path_step_2">2.将SD卡/yunsu/path/sync_task的文件拷贝至电脑</string>
    <string name="offline_path_step_3">3.将SD卡/yunsu/path/sync_task中的文件移至/yunsoo/path/sync_success中</string>

    <string name="has_no_pack_sync">没有包装需要同步哦，先去打包吧</string>
    <string name="has_no_path_sync">没有物流需要同步哦，开始扫描吧</string>

    <string name="fix_finish">修改完成</string>
    <string name="title_activity_path_sync">PathSyncActivity</string>
    <string name="title_activity_global_setting">GlobalSettingActivity</string>

    <string name="authorize_status">是否授权</string>
    <string name="clear_cache">清除历史数据</string>

    <string name="current_version">当前版本</string>
    <string name="auto_sync">自动同步时间</string>
    <string name="scan_count">扫描计数</string>

    <string name="cancel_authorize">取消授权</string>
    <string name="not_authorize">PDA授权已被取消</string>
    <string name="cancel_authorize_message">当前PDA的功能将不可用，需要重新回到授权界面进行授权</string>
    <string name="not_authorize_message">当前PDA的授权已在服务平台取消，需要重新回到授权界面进行授权</string>
    <string name="confirm">确认</string>
    <string name="confirm_cancel_authorize">解除授权</string>
    <string name="title_activity_org_agency">OrgAgencyActivity</string>

    <string name="choose_org_agency">选择经销商</string>
    <string name="please_choose_org_agency">请选择经销商</string>
    <string name="delivery_amount">发货数</string>
    <string name="agency">经销商：</string>
    <string name="total_inbound">总计入库：</string>
    <string name="total_outbound">总计出库：</string>
    <string name="inbound">入库：</string>
    <string name="outbound">出库：</string>
    <string name="outbound_schedule">出库进度：</string>
    <string name="inbound_scan">入库扫描</string>
    <string name="outbound_scan">出库扫描</string>
    <string name="outbound_order">出库订单</string>
    <string name="add">添加</string>
    <string name="order">订单：</string>
    <string name="create_time">创建时间：</string>
    <string name="create_new_order">新建订单</string>
    <string name="done">完成</string>
    <string name="please_type_in_amount">请输入发货数</string>
    <string name="scan_key">正在扫码：</string>


    <!--OrderList-->
    <string name="order_finish">订单完成</string>
    <string name="order_finish_message">订单内的所有包装出库完成</string>
    <string name="confirm_create">确认创建</string>
    <string name="create_new_order_tip">暂无订单，请创建新订单</string>
    <string name="new_order">新订单</string>
    <string name="not_start">未开始</string>
    <string name="in_progress">进行中</string>
    <string name="finished">已完成</string>


    <!--<OrderScan>-->
    <string name="confirm_finish">强制完成</string>
    <string name="confirm_finish_message">此操作将会提前完成订单，实际出库数将会小于应出库数</string>
    <string name="revoke_operation">撤销操作</string>
    <string name="scan_key_tip">请扫描需要出库的包装</string>
    <string name="key_exist_in_this_order">该包装已存在于当前订单中，请检查</string>
    <string name="key_exist_in_other_order">该包装已存在于订单</string>
    <string name="finished_order_can_not_delete">完成订单不能删除</string>
    <string name="confirm_delete_order">确认删除订单</string>

    <!--<inboundScan>-->
    <string name="key_inbound_already">该包装已入库，请检查</string>


    <!--<revoke>-->
    <string name="repeal_operation">撤销操作</string>
    <string name="repeal_inbound">撤销入库</string>
    <string name="repeal_outbound">撤销出库</string>
    <string name="revoke_scan_tip">请扫描需要撤销的包装码</string>
    <string name="revoke_scan_key">正在撤销：</string>
    <string name="order_amount">目标总数：</string>
    <string name="count_in_progress">已出库：</string>
    <string name="count_remain">需出库：</string>
    <string name="revoke_count">撤销数：</string>
    <string name="confirm_revoke">完成撤销</string>

    <!--<report>-->
    <string name="data_report">数据报表</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="query">查询</string>
    <string name="no_content">当前日期无记录</string>
    <string name="please_input_sync_rate">自动同步时间（120分钟内）</string>
    <string name="minute">分钟</string>
    <string name="every">每隔</string>
    <string name="key_not_exist">当前码不存在，请检查</string>

    <!--<inboundScan>-->
    <string name="pack_list_empty_tip">请扫描需要入库的包装码</string>

</resources>
