<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yunsu.activity.OrderRevokeActivity">
    <com.yunsu.common.view.TitleBar
        android:id="@+id/title_bar"
        layout="@layout/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/ll_agency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:background="@drawable/item_bg_bottom_normal"
        >
        <TextView
            android:id="@+id/tv_agency_name_des"
            android:text="@string/agency"
            style="@style/text_style_order_list"
            />
        <TextView
            android:id="@+id/tv_agency_name"
            style="@style/text_style_order_list"
            android:layout_toRightOf="@+id/tv_agency_name_des"
            android:text="杭州经销商"
            />
    </RelativeLayout>




    <LinearLayout
        android:id="@+id/ll_order_number"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_agency"
        android:background="@drawable/item_bg_bottom_normal"
        >
        <TextView
            style="@style/text_style_order_list"
            android:text="@string/order"/>
        <TextView
            android:id="@+id/tv_order_id"
            style="@style/text_style_order_list"
            android:text="1"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_order_number"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:text="@string/outbound_schedule"
            style="@style/text_style_order_list" />
        <TextView
            android:id="@+id/tv_outbound_count"
            style="@style/text_style_order_scan_big"
            android:text="10" />
        <TextView
            android:text="/"
            style="@style/text_style_order_scan_big"
            android:textColor="#f16969"
            />
        <TextView
            android:id="@+id/tv_outbound_amount"
            style="@style/text_style_order_scan_big"
            android:textColor="#f0625e"
            android:text="100" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_scan_key"
        android:layout_below="@+id/ll_progress"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:text="@string/revoke_scan_key"
            style="@style/text_style_order_list" />
        <TextView
            android:id="@+id/tv_scan_key"
            android:layout_width="200dp"
            android:lines="2"
            style="@style/text_style_order_list" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_picture"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_scan_key"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >
        <ImageView
            android:src="@drawable/ic_order_scan"
            android:scaleType="centerInside"
            android:layout_width="100dp"
            android:layout_height="130dp" />
        <TextView
            android:text="@string/revoke_scan_tip"
            style="@style/text_style_order_list"
            android:textColor="#cccccc"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/et_scan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        />


</RelativeLayout>
