<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_order_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_bg_bottom"
    android:layout_marginTop="20dp"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/ll_order_number"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_report"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/order"/>
        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_report"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="1" />

        <TextView
            android:id="@+id/tv_progress_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style_report"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_marginLeft="40dp"
            android:text="未开始"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_agency_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_order_number"
        android:focusable="false"
        android:focusableInTouchMode="false"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            >
            <TextView
                android:text="@string/agency"
                style="@style/text_style_report"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />

            <TextView
                android:text="@string/outbound_schedule"
                style="@style/text_style_report"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            >
            <TextView
                android:id="@+id/tv_agency_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_style_report"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="杭州经销商"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false">
                <TextView
                    android:id="@+id/tv_outbound_count"
                    style="@style/text_style_report"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="10" />
                <TextView
                    android:text="/"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    style="@style/text_style_report"
                    />
                <TextView
                    android:id="@+id/tv_outbound_amount"
                    style="@style/text_style_report"
                    android:text="100"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>



</RelativeLayout>